@@ -14,15 +14,13 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.converter.HttpMessageConverter;
 
-import java.util.stream.Collectors;
-
 @Configuration
 public class WebFluxWithOpenFeignConfig {
 
     @Bean
     @ConditionalOnMissingBean
     public HttpMessageConverters messageConverters(ObjectProvider<HttpMessageConverter<?>> converters) {
-        return new HttpMessageConverters(converters.orderedStream().collect(Collectors.toList()));
+        return new HttpMessageConverters(converters.orderedStream().toList());
     }
 }
 
