@@ -15,7 +15,6 @@ import net.coobird.thumbnailator.Thumbnails;
 import net.coobird.thumbnailator.tasks.UnsupportedFormatException;
 import org.apache.commons.lang3.BooleanUtils;
 import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.util.Assert;
@@ -33,7 +32,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 /**
  * description:
@@ -53,7 +51,6 @@ public class MinioTemplate implements InitializingBean {
 
     // AI Agent：使用构造函数注入替代字段注入，提高代码可测试性和安全性
     // 说明：构造函数注入可以确保依赖不为空，并且便于单元测试
-    @Autowired
     public MinioTemplate(MinioProperties minioProperties) {
         Assert.notNull(minioProperties, "MinioProperties must not be null!");
         this.minioProperties = minioProperties;
@@ -271,7 +268,7 @@ public class MinioTemplate implements InitializingBean {
      */
     public Map<String, String> removeObjects(String bucketName, List<String> objects) throws Exception {
         Map<String, String> resultMap = new HashMap<>();
-        List<DeleteObject> dos = objects.stream().map(DeleteObject::new).collect(Collectors.toList());
+        List<DeleteObject> dos = objects.stream().map(DeleteObject::new).toList();
         Iterable<Result<DeleteError>> results = minioClient.removeObjects(
                 RemoveObjectsArgs.builder()
                         .bucket(bucketName)
