@@ -99,9 +99,9 @@ public class MenuInfoServiceImp extends ServiceImpl<MenuInfoMapper, MenuInfo> im
                 .collect(Collectors.groupingBy(MenuInfoVo::getParentId));
         List<MenuInfoVo> result = list.stream().filter(item -> item.getParentId() == null)
                 .peek(item -> item.setChildren(getChildren(item.getId(), menuMap)))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (isFullQuery && result != null && !result.isEmpty()) {
+        if (isFullQuery && !result.isEmpty()) {
             try {
                 redisUtils.setEx(cacheRealKey, JSONObject.toJSONString(result), 1, TimeUnit.HOURS);
                 log.info("完整菜单树成功写入 Redis 缓存");
